--- a/public/messageScreen.html
+++ b/public/messageScreen.html
@@ -3,25 +3,23 @@
     <head>
         <meta charset="UTF-8" />
     <title>Fireplace</title>
-    <!-- Stylizing was primarily made by ai -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
+    <!-- css was primarily made by ai with some modifications -->
     <style>
         body {
             height: 100vh;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+            background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
         .message-card {
-            background: white;
+            background: black;
             border-radius: 18px;
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+            box-shadow: 0 8px 32px 0 rgba(200, 0, 0, 0.9);
             padding: 40px 32px;
             min-width: 320px;
             max-width: 100%;
@@ -35,14 +33,14 @@
             margin: 0 0 20px 0;
             font-size: 2.1em;
             font-weight: 700;
-            color: #364f6b;
+            color: rgb(200, 100, 0);
             text-align: center;
             letter-spacing: 1px;
         }
 
         #messages {
-            background: #f8f8f8;
-            border: 1px solid #d5d5d5;
+            background: rgba(46, 45, 45, 1);
+            border: 1px solid rgb(200, 100, 0);
             border-radius: 8px;
             min-height: 500px;
             max-height: 600px;
@@ -61,22 +59,24 @@
             flex-grow: 1;
             padding: 10px 12px;
             border-radius: 6px;
-            border: 1px solid #d5d5d5;
+            border: 1px solid rgb(200, 100, 0);;
             font-size: 1em;
             transition: border-color 0.2s, box-shadow 0.2s;
             outline: none;
+            background: rgba(46, 45, 45, 1);
+            color: rgb(200, 100, 0);
         }
 
         form input[type="text"]:focus {
-            border-color: #74ebd5;
-            box-shadow: 0 0 8px #74ebd578;
+            border-color: rgb(200, 100, 0);
+            box-shadow: 0 0 16px rgb(200, 100, 0);;
         }
 
         form button[type="submit"] {
             padding: 10px 28px;
-            background: linear-gradient(90deg, #08aeea 0%, #2af598 100%);
-            color: #fff;
-            border: none;
+            background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+            color: black;
+            border: 3px solid rgba(200, 0, 0, 0.9);
             border-radius: 6px;
             font-size: 1.05em;
             font-weight: 600;
@@ -86,48 +86,51 @@
         }
 
         form button[type="submit"]:hover {
-            background: linear-gradient(90deg, #2af598 0%, #08aeea 100%);
+            background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
             transform: translateY(-2px) scale(1.04);
         }
 
         /* My Personal Css */
         .usernameElement {
-            color: blue;
+            color: rgb(200, 100, 0);
             display: inline;
         }
 
         p.messageElement {
-            color: black;
+            color: rgb(200, 100, 0);
             display: block;
             margin-top: 20px;
+            margin-bottom: 20px;
             font-size: 16px;
             padding: 8px 12px;
             line-height: 1.4;
-            border: 1px solid #ccc;
+            border: 1px solid rgb(200, 100, 0);
             border-radius: 4px;
             box-sizing: border-box;
-            width: 100%; /* Or the desired width */
+            width: 100%;
         }
 
         input.messageElement {
-            color: blue;
+            color: rgb(200, 0, 0);
             display: block;
             margin-top: 20px;
+            margin-bottom: 20px;
             font-size: 16px;
             padding: 8px 12px;
             line-height: 1.4;
-            border: 1px solid #ccc;
+            background: rgba(46, 45, 45, 1);
+            border: 1px solid rgb(200, 0, 0);
             border-radius: 4px;
             box-sizing: border-box;
-            width: 100%; /* Or the desired width */
+            width: 100%;
         }
 
         .buttonElement {
             min-height: 20px;
             min-width: 50px;
-            background: linear-gradient(90deg, #08aeea 0%, #2af598 100%);
-            color: #fff;
-            border: none;
+            background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+            color: black;
+            border: 3px solid rgba(200, 0, 0, 0.9);
             border-radius: 6px;
             font-size: 1.05em;
             font-weight: 600;
@@ -137,10 +140,15 @@
             margin-left: 10px;
         }
 
+        .buttonElement:hover {
+            background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+            transform: translateY(-2px) scale(1.04);
+        }
+
         .logoutButton {
-            background: linear-gradient(90deg, #08aeea 0%, #2af598 100%);
-            color: #fff;
-            border: none;
+            background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+            color: black;
+            border: 3px solid black;
             border-radius: 6px;
             font-size: 1.05em;
             font-weight: 600;
@@ -152,6 +160,11 @@
             right: 0;
             margin: 16px;
             padding: 10px 28px;
+        }
+
+        .logoutButton:hover {
+            background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+            transform: translateY(-2px) scale(1.04);
         }
 
     </style>
