added in a logo for the icon and added the same logo to the login screen

--- a/public/loginScreen.html
+++ b/public/loginScreen.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Fireplace </title>
+        <title>Fireplace</title>
+        <link rel="icon" href="/images/campfire.png" type="image/png">
         <link href="/loginScreenStyle.css" rel="stylesheet"/>
     </head>
 
         <body>
+            <img src="/images/campfire.png">
+
             <div class="login-card">
                 <h1>Fireplace</h1>
                 <form id="registerForm" class="login-form" onsubmit="return false;">
