--- a/public/messageScreen.html
+++ b/public/messageScreen.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <script src="/socket.io/socket.io.js"></script>
         <title>Fireplace</title>
+        <link rel="icon" href="/images/campfire.png" type="image/png">
         
         <link href="/messageScreenStyle.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
