created separate directories for html, css, and js files served up to client. changed end points to display the new working directories

--- a/public/html/loginScreen.html
+++ b/public/html/loginScreen.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Fireplace</title>
         <link rel="icon" href="/images/campfire.png" type="image/png">
-        <link href="/loginScreenStyle.css" rel="stylesheet"/>
+        <link href="/css/loginScreenStyle.css" rel="stylesheet"/>
     </head>
 
         <body>
@@ -29,7 +29,7 @@
             </div>
         </body>
     
-        <script src="/loginScreenScript.js"></script>
+        <script src="/js/loginScreenScript.js"></script>
        
     </body>
 </html>
