--- a/public/html/messageScreen.html
+++ b/public/html/messageScreen.html
@@ -6,7 +6,7 @@
         <title>Fireplace</title>
         <link rel="icon" href="/images/campfire.png" type="image/png">
         
-        <link href="/messageScreenStyle.css" rel="stylesheet">
+        <link href="/css/messageScreenStyle.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     </head>
     <body>
@@ -28,7 +28,7 @@
         </form>
         </div>
         
-        <script src="/messageScreenScript.js"></script>
+        <script src="/js/messageScreenScript.js"></script>
     </body>
 
 </html>
