added placeholder websites to between the navbar sites. Logout works on all of them. They all have valid get endpoints to reach the html file

--- a/public/html/globalChat.html
+++ b/public/html/globalChat.html
@@ -12,13 +12,12 @@
     </head>
     <body>
 
-        <!-- Navigation Bar -->
         <div class="navigationBar">
             <img src="/images/campfire.png">
             <h2>Fireplace</h2>
             <button class="activeScreen">Global Chat</button>
-            <button>Friend Chat</button>
-            <button>Add Friends</button>
+            <button onclick="openFriendChat()">Friend Chat</button>
+            <button onclick="openAddFriends()">Add Friends</button>
             <button onclick="logout()">Logout</button>
         </div>
 
