changed global chat style to look more modern. Added in username in top right of navigation bar

--- a/public/html/addFriends.html
+++ b/public/html/addFriends.html
@@ -17,6 +17,7 @@
             <button onclick="openFriendChat()">Friend Chat</button>
             <button class="activeScreen">Add Friends</button>
             <button onclick="logout()">Logout</button>
+            <h4 id="usernameTopRightElement">username</h4>
         </div>
 
         <h1>Adding Friends</h1>
