added in profile picture to top right nav bar and in global chat. Default image which is unchangeable for now

--- a/public/html/addFriends.html
+++ b/public/html/addFriends.html
@@ -17,6 +17,7 @@
             <button onclick="openFriendChat()">Friend Chat</button>
             <button class="activeScreen">Add Friends</button>
             <button onclick="logout()">Logout</button>
+            <img src="/images/basicUserImage.png" id="profilePicture">
             <h4 id="usernameTopRightElement">username</h4>
         </div>
 
