--- a/public/html/friendChat.html
+++ b/public/html/friendChat.html
@@ -17,6 +17,7 @@
             <button class="activeScreen">Friend Chat</button>
             <button onclick="openAddFriends()">Add Friends</button>
             <button onclick="logout()">Logout</button>
+            <img src="/images/basicUserImage.png" id="profilePicture">
             <h4 id="usernameTopRightElement">username</h4>
         </div>
 
