--- a/public/html/globalChat.html
+++ b/public/html/globalChat.html
@@ -19,6 +19,7 @@
             <button onclick="openFriendChat()">Friend Chat</button>
             <button onclick="openAddFriends()">Add Friends</button>
             <button onclick="logout()">Logout</button>
+            <img src="/images/basicUserImage.png" id="profilePicture">
             <h4 id="usernameTopRightElement">username</h4>
         </div>
 
