Added in the feature to send friend requests. Added in the feature to view pending friend requests

--- a/public/html/addFriends.html
+++ b/public/html/addFriends.html
@@ -27,10 +27,10 @@
         </form>
 
         <div class="friendListsContainer">
-            <div class="friendsList">
+            <div class="friendsList" id="friendsList">
                 <h2>Friends List</h2>
             </div>
-            <div class="pendingFriendsList">
+            <div class="pendingFriendsList" id="pendingFriendsList">
                 <h2>Pending Friends List</h2>
             </div>
         </div>
