Added profanity check to username registration and updated profanity filter to check for non spaced out words

--- a/public/html/loginScreen.html
+++ b/public/html/loginScreen.html
@@ -5,6 +5,7 @@
         <title>Fireplace</title>
         <link rel="icon" href="/images/campfire.png" type="image/png">
         <link href="/css/loginScreenStyle.css" rel="stylesheet"/>
+        <script src="/js/badWordFilter.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jsencrypt@3.3.2/bin/jsencrypt.min.js"></script>
     </head>
 
