Moved utility functions to a new file named utils.js. Reduces redundant code in the client js files and improves clarity

--- a/public/html/addFriends.html
+++ b/public/html/addFriends.html
@@ -8,6 +8,7 @@
         
         <link href="/css/addFriendsStyle.css" rel="stylesheet">
         <link href="/css/navBar.css" rel="stylesheet">
+        <script src="/js/utils.js"></script>
     </head>
     <body>
 
