Exported all the util functions which needed restructuring of all the client js files. Slight Bug with Edit/Delete Messages Sometimes but mostly working

--- a/public/html/addFriends.html
+++ b/public/html/addFriends.html
@@ -8,7 +8,7 @@
         
         <link href="/css/addFriendsStyle.css" rel="stylesheet">
         <link href="/css/navBar.css" rel="stylesheet">
-        <script src="/js/utils.js"></script>
+        <script type="module" src="/js/utils.js"></script>
     </head>
     <body>
 
@@ -46,7 +46,7 @@
             </div>
         </div>
     
-        <script src="/js/addFriendsScript.js"></script>  
+        <script type="module" src="/js/addFriendsScript.js"></script>  
 
     </body>
 </html>
