--- a/public/html/friendChat.html
+++ b/public/html/friendChat.html
@@ -9,7 +9,7 @@
         <link href="/css/friendChatStyle.css" rel="stylesheet">
         <link href="/css/navBar.css" rel="stylesheet">
         <script src="/js/badWordFilter.js"></script>
-        <script src="/js/utils.js"></script>
+        <script type="module" src="/js/utils.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jsencrypt@3.3.2/bin/jsencrypt.min.js"></script>
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <script src="/js/friendChatScript.js"></script>
+        <script type="module" src="/js/friendChatScript.js"></script>
 
     </body>
 </html>
