--- a/public/html/globalChat.html
+++ b/public/html/globalChat.html
@@ -9,7 +9,7 @@
         <link href="/css/globalChatStyle.css" rel="stylesheet">
         <link href="/css/navBar.css" rel="stylesheet">
         <script src="/js/badWordFilter.js"></script>
-        <script src="/js/utils.js"></script>
+        <script type="module" src="/js/utils.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     </head>
@@ -39,7 +39,7 @@
             </form>
         </div>
         
-        <script src="/js/globalChatScript.js"></script>
+        <script type="module" src="/js/globalChatScript.js"></script>
     </body>
 
 </html>
