--- a/public/html/loginScreen.html
+++ b/public/html/loginScreen.html
@@ -6,7 +6,6 @@
         <link rel="icon" href="/images/campfire.png" type="image/png">
         <link href="/css/loginScreenStyle.css" rel="stylesheet"/>
         <script src="/js/badWordFilter.js"></script>
-        <script src="/js/utils.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jsencrypt@3.3.2/bin/jsencrypt.min.js"></script>
     </head>
 
@@ -32,7 +31,7 @@
             </div>
         </body>
     
-        <script src="/js/loginScreenScript.js"></script>
+        <script type="module" src="/js/loginScreenScript.js"></script>
        
     </body>
 </html>
